fix: alignment improments in list section

--- a/sass/list.sass
+++ b/sass/list.sass
@@ -12,17 +12,17 @@
 
 
     &__items 
-        width: 285px
-        margin: 2.66em
+        width: 24.1%
         font-size: 20px
-        line-height: 27px
+        margin: 2.66em
+        line-height: 1.37em
 
 
         &__title 
-            margin-top: 10px
-            margin-bottom: 20px
             font-size: 27px
+            margin-top: 0.37em
+            margin-bottom: 0.74em
             opacity: 0.8
 
-        &__description
+        &__description, &__icon
             margin: 0
