--- a/style.css
+++ b/style.css
@@ -116,18 +116,18 @@ body {
   top: 42.2%;
 }
 .list__items {
-  width: 285px;
-  margin: 2.66em;
+  width: 24.1%;
   font-size: 20px;
-  line-height: 27px;
+  margin: 2.66em;
+  line-height: 1.37em;
 }
 .list__items__title {
-  margin-top: 10px;
-  margin-bottom: 20px;
   font-size: 27px;
+  margin-top: 0.37em;
+  margin-bottom: 0.74em;
   opacity: 0.8;
 }
-.list__items__description {
+.list__items__description, .list__items__icon {
   margin: 0;
 }
 
